test/negative/lex_bad_hex.mut
# Negative: invalid hex literal (no digits after 0x)
x: i64 = 0xZZ
